--- a/sass/layout/_content.scss
+++ b/sass/layout/_content.scss
@@ -1,4 +1,6 @@
 #wpcontent{
+  z-index: $zIndex-content;
+  
   #wpadminbar{
     
   }
