--- a/sass/modules/_wysiwyg.scss
+++ b/sass/modules/_wysiwyg.scss
@@ -50,3 +50,8 @@
 #post-status-info{
   box-shadow: none !important;
 }
+
+// Z-index
+.wp-editor-expand div.mce-toolbar-grp{
+  z-index: $zIndex-content;
+}
